[package]
name = "toku"
version = "0.1.0"
authors = ["qdequele <quentin@dequelen.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
whatlang = "0.9.0"
unicode-segmentation = "1.6.0"
jieba-rs = "0.6"